--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -7,6 +7,19 @@ services:
     environment:
       TUNNEL_TOKEN: ${CLOUDFLARE_TOKEN}
 
+  postgresql:
+    image: postgresql
+    container_name: postgresql
+    restart: unless-stopped
+    ports:
+      - 5432:5432
+    volumes:
+      - ./volumes/postgresql:/var/lib/postgresql/18
+    environment:
+      - POSTGRES_USER=${POSTGRES_USER}
+      - POSTGRES_PASSWORD=${POSTGRES_PASSWORD}
+      - POSTGRES_DB=${POSTGRES_DB}
+
   server:
     build:
       context: ./services/test
