--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -9,20 +9,12 @@ services:
 
   postgresql:
     image: postgres:latest
-    container_name: postgresql
+    container_name: postgres
     restart: unless-stopped
     ports:
       - 5432:5432
     volumes:
       - ./volumes/postgresql:/var/lib/postgresql/18
-      - ./volumes/cloudflared/server.crt:/var/lib/postgresql/server.crt:ro
-      - ./volumes/cloudflared/server.key:/var/lib/postgresql/server.key:ro
-    command:
-      - "postgres"
-      - "-c ssl=on"
-      - "-c ssl_cert_file=/var/lib/postgresql/server.crt"
-      - "-c ssl_key_file=/var/lib/postgresql/server.key"
-
     environment:
       - POSTGRES_USER=${POSTGRES_USER}
       - POSTGRES_PASSWORD=${POSTGRES_PASSWORD}
@@ -31,6 +23,7 @@ services:
   server:
     build:
       context: ./services/test
+    container_name: server
     ports:
       - 80:80
     restart: unless-stopped
